--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.4",
     "astro": "^5.1.1",
+    "flowbite": "^2.5.2",
     "tailwindcss": "^3.4.17"
   }
 }
