--- a/package.json
+++ b/package.json
@@ -9,9 +9,23 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@analogjs/astro-angular": "^1.12.1",
+    "@angular-devkit/build-angular": "^19.1.1",
+    "@angular/animations": "^19.1.1",
+    "@angular/common": "^19.1.1",
+    "@angular/compiler": "^19.1.1",
+    "@angular/compiler-cli": "^19.1.1",
+    "@angular/core": "^19.1.1",
+    "@angular/language-service": "^19.1.1",
+    "@angular/platform-browser": "^19.1.1",
+    "@angular/platform-browser-dynamic": "^19.1.1",
+    "@angular/platform-server": "^19.1.1",
     "@astrojs/tailwind": "^5.1.4",
     "astro": "^5.1.1",
     "flowbite": "^2.5.2",
-    "tailwindcss": "^3.4.17"
+    "rxjs": "^7.8.1",
+    "tailwindcss": "^3.4.17",
+    "tslib": "^2.8.1",
+    "zone.js": "^0.15.0"
   }
 }
